# JEPA_Robotics

./: .coverage  .gitignore  GEMINI.md  README.md  architecture.md  crucible_baseline.json  environment.yml  log.md  output.txt  pyproject.toml  scratch_test.py  stress_test_report.json  test_cv2.py  test_cv2_slice.py  test_loaders.py  test_pyav.py
.agents/: AGENTS.md
docs/: Initial_proposal.md  V1.5_plan.md  V1_plan.md  V2.5_plan.md  V2_plan.md  dataset_analysis_report.md  future_work.md  v1_Phase2_plan.md
models/v1_jepa_backbone/: stress_test_analysis.md
scripts/: OOM_maxout.py  ai_debugger.py  analyze_datasets.py  download_datasets.py  download_datasets.sh  smac_assessment.py  stress_test.py  test_load.py  test_mujoco.py  train.py  trainV1_5.py  visualize_batch.py
scripts/v1_5_upgrades/: interpolate_weights.py
smac3_output/v1_jepa_world_model/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
smac3_output/v1_normalised_probe/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
src/jepa_robotics/: __init__.py
src/jepa_robotics/data/: __init__.py  dataset_loaders.py  kinematics.py
src/jepa_robotics/evaluation/: ik_solver.py  mujoco_env.py
src/jepa_robotics/models/: v_jepa.py  world_model.py
src/jepa_robotics/training/: ema.py  loop.py  optimization.py  step.py
templates/: index.html
tests/: test_dataset_loaders.py  test_evaluation.py  test_imagination.py  test_kinematics.py  test_load.py  test_models.py  test_mujoco.py  test_stress_test.py
