[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa_robotics"
version = "0.1.0"
description = "Cross-Embodiment Latent World Model for Edge Robotics"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
